# InnoTodo-Auth

./: .env.sample  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: config.py  db.py  utils.py
app/api/: routes.py
app/api/routers/: auth.py  user.py
app/dependecies/: auth.py
app/interfaces/: repository.py
app/models/: base.py  user.py
app/repositories/: base.py  user.py
app/schemas/: auth.py  user.py
app/services/: auth.py  base.py  user.py
kubernetes/: auth-app.yaml  auth-config.yaml  postgres-auth-pv.yaml  postgres-auth-pvc.yaml  postgres-auth.yaml
